--- a/second_file.html
+++ b/second_file.html
@@ -60,6 +60,6 @@ login_button.click()
 time.sleep(3)
 logout = driver.find_element_by_link_text("Logout")
 if logout:
-  print("Logout есть!")
+  print("Logout РµСЃС‚СЊ!")
 else:
-  print("Logout не появился")
+  print("Logout РЅРµ РїРѕСЏРІРёР»СЃСЏ")
