--- a/third_file.html
+++ b/third_file.html
@@ -247,7 +247,7 @@ else:
     print("В Subtotal НЕ ОТОБРАЗИЛАСЬ стоимость")
 time.sleep(3)
 total = driver.find_element_by_css_selector(".order-total")
-if str("?184.60"):
+if str("₹184.60"):
     print("В Total ОТОБРАЗИЛАСЬ стоимость")
 else:
     print("В Total НЕ ОТОБРАЗИЛАСЬ стоимость")
